--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <!-- We have three sections -->
     <!-- About starts here -->
     <section>
-        <p class="about-title-p"> Get to know More </p>
-        <h1 class="about-title-h1"> About Me</h1>
+        <p class="global-title-p"> Get to know More </p>
+        <h1 class="global-title-h1"> About Me</h1>
 
         <div class="container about-container">
             <img src="./images/pro2.jpg" alt="">
@@ -102,6 +102,176 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis doloremque cumque beatae ipsum corporis tenetur blanditiis, maxime quas accusantium atque debitis facere voluptate! Ducimus incidunt saepe ex pariatur, qui error.
             </p>
         </div>
+    </section>
+
+        <!-- Experience starts here -->
+        
+        <section>
+            <p class="global-title-p">
+                Explore My
+            </p>
+            <h1 class="global-title-h1">Experiences</h1>
+            <div class="container experience-container">
+            <div class="expereience-box">
+                <h2>Frontend Development</h2>
+                <div class="experience">
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                HTML
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                CSS
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                SCSS
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                Javascript
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                ReactJS
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                NodeJS
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>                    
+                </div>
+            </div>
+            <!-- second expereince box -->
+            <div class="expereience-box">
+                <h2>Backend Development</h2>
+                <div class="experience">
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                MongoDB
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                NodeJS
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                ExpressJS
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ex-div">
+                        <img src="images/checkmark.png" alt="">
+                        <div>
+                            <h4>
+                                Github
+                            </h4>
+                            <p>
+                                Experienced
+                            </p>
+                        </div>
+                    </div>                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Project Section starts  Three project-->
+
+    <section>
+        <p class="global-title-p">
+            Brows My Recent
+        </p>
+        <h1 class="global-title-h1">Projects</h1>
+        <div class="container project-container">
+
+            <div class="project">
+                <img src="./images/project-1.png" alt="">
+                <h3> Project 1</h3>
+                <div class="header-action-area">
+                    <a href="" class="btn">GitHub</a>
+                    <a href="" class="btn btn-d">Live Demo</a>
+                </div>
+            </div>    
+
+                <div class="project">
+                    <img src="./images/project-2.png" alt="">
+                    <h3> Project 2</h3>
+                    <div class="header-action-area">
+                        <a href="" class="btn">GitHub</a>
+                        <a href="" class="btn btn-d">Live Demo</a>
+                    </div>
+            </div>
+                <div class="project">
+                <img src="./images/project-3.png" alt="">
+                <h3> Project 3</h3>
+                <div class="header-action-area">
+                    <a href="" class="btn">GitHub</a>
+                    <a href="" class="btn btn-d">Live Demo</a>
+                </div>
+
+            </div>
+        </div>    
     </section>
 
 </body>
