--- a/index.html
+++ b/index.html
@@ -274,5 +274,36 @@
         </div>    
     </section>
 
+    <!-- Contact section starts here -->
+
+
+    <section>
+        <p class="global-title-p">
+            Let's Connect
+        </p>
+        <h1 class="global-title-h1">Contact Me</h1>
+        <div class="container contact-container">
+            <div class="contact-left">
+                <img class = "icon-social" src="./images/email.png" alt="">
+                <a href="">
+                    <h3>anisul.mahmud@outlook.com</h3>
+                </a>
+            </div>
+            
+            <div class="contact-right">
+                <img class = "icon-social" src="./images/linkedin.png" alt="">
+                <a href="">
+                   <h3>Linkedin</h3>
+                </a>
+            </div>
+        </div>    
+
+
+        <!-- Footer starts here -->
+
+        <footer>
+            <p>Copyright &copy; Anisul Mahmud || All Rights Reserved</p>
+        </footer>
+
 </body>
 </html>
